--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "make test"
   },
   "repository": "",
   "author": "Wouter Roosendaal",
@@ -15,5 +16,12 @@
     "express": "3.4.2",
     "mongodb": "1.3.6",
     "jade": "*"
+  },
+  "devDependencies": {
+    "mocha": "1.14.0",
+    "supertest": "0.8.1",
+    "should": "2.0.2",
+    "chai": "1.8.1"
   }
+
 }
