--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "express": "3.4.2",
+    "express-namespace": "0.1.1",
     "mongodb": "1.3.6",
     "jade": "*"
   },
