--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "express": "3.4.2",
     "express-namespace": "0.1.1",
     "mongodb": "1.3.6",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-local": "*",
+    "passport-facebook": "*",
+    "passport-twitter": "*",
     "jade": "*"
   },
   "devDependencies": {
